# Tarea3_EDA

tree_evaluation/: CMakeLists.txt  README.md  test.cpp
tree_evaluation/include/trees/: avl.hpp  avlNode.hpp  rb.hpp
tree_evaluation/src/: abb.cpp  avl.cpp  avlNode.cpp  rb.cpp
